# femus-1

./: .gitignore  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/NOM/: CMakeLists.txt
applications/NOM/ex1/: ex1.cpp
applications/NOM/ex1/include/: nom.cpp  nom.hpp  simpleMatrix.cpp  simpleMatrix.hpp
applications/zzz_sandbox/Karthik/: CMakeLists.txt
applications/zzz_sandbox/Karthik/coupled_biharmonic/: biharmonic_coupled.hpp  coupled_biharmonic.cpp
applications/zzz_sandbox/Karthik/coupled_biharmonic_four_blocks/: coupled_biharmonic_four_blocks.cpp  coupled_biharmonic_four_blocks.hpp
applications/zzz_sandbox/Karthik/coupled_biharmonic_multiple_domains_sol/: coupled_biharmonic_multiple_domains_sol.cpp
applications/zzz_sandbox/Karthik/coupled_biharmonic_nonauto/: coupled_biharmonic_nonauto.cpp  coupled_biharmonic_nonauto.hpp
applications/zzz_sandbox/Karthik/coupled_biharmonic_nonauto_conv/: coupled_biharmonic_nonauto_conv.cpp  coupled_biharmonic_nonauto_conv.hpp
applications/zzz_sandbox/Karthik/coupled_biharmonic_test/: coupled_biharmonic_test.cpp  coupled_biharmonic_test.hpp
applications/zzz_sandbox/Karthik/hermann_miyoshi/: CMakeLists.txt  biharmonic_HM.hpp  hermann_miyoshi.cpp
applications/zzz_sandbox/Karthik/optimal_control/: CMakeLists.txt
applications/zzz_sandbox/Karthik/poisson/: poisson.cpp
applications/zzz_sandbox/Karthik/poisson_nonauto/: poisson_nonauto.cpp  poisson_nonauto.hpp
applications/zzz_sandbox/Karthik/poisson_nonauto_conv/: poisson_nonauto_conv.cpp  poisson_nonauto_conv.hpp  poisson_nonauto_conv1.hpp
(+201 files in other folders)
