CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)

IF(SLEPC_FOUND)
  ADD_SUBDIRECTORY(ex1/)
ENDIF(SLEPC_FOUND)
  


# FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/NOM/input/)
# FILE(COPY           ${PROJECT_SOURCE_DIR}/applications/NOM/input/ DESTINATION ${PROJECT_BINARY_DIR}/NOM/NonLocal/input/)


